채팅 메시지 커서 및 인덱스 적용